
Nov 26, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0rc3

Nov 20, 2011 - chris ---------------------------------------------------
o improved performance for duplicates, transactions and cursors

Nov 10, 2011 - chris ---------------------------------------------------
o fixed the remaining 3 known issues after lots of refactoring

Oct 11, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0rc2

Oct 09, 2011 - chris ---------------------------------------------------
o fixed a bug when erasing extended keys; sometimes this would try to
    load extended keys which do not exist (thanks, Andi Weber)

Oct 02, 2011 - chris ---------------------------------------------------
o added a new function ham_cursor_get_record_size; retrieves the record
    size of the current item

Sep 27, 2011 - chris ---------------------------------------------------
o the cache size is now 64bit, allowing caches > 4 GB

Aug 25, 2011 - chris ---------------------------------------------------
o configure.in: AM_INIT_AUTOMAKE requests now version 1.10 (thanks, Ger)
o enabled large file support for 32bit linux (thanks, liheyuan)

Jul 25, 2011 - chris ---------------------------------------------------
                      release of hamsterdb-2.0.0rc1

Jun 02, 2011 - chris
o the ./configure switch --enable-internal is now obsolte and enabled by
	default

Apr 18, 2011 - chris
o HAM_SORT_DUPLICATES is now disabled if Transactions are enabled.
    In such cases hamsterdb will return HAM_INV_PARAMETER. 

Dec 29, 2010 - chris
o Approx. matching is now disabled if Transactions are enabled. 
    In such cases functions will return HAM_INV_PARAMETER. 
o Direct access (HAM_DIRECT_ACCESS) is now disabled if Transactions are 
    enabled. In such cases functions will return HAM_INV_PARAMETER. 
    In previous versions Direct Access was anyway not possible in combination