@@ -1,0 +1,30 @@
+java/de/crupp/hamsterdb/CompareCallback.class
+java/de/crupp/hamsterdb/Const.class
+java/de/crupp/hamsterdb/Cursor.class
+java/de/crupp/hamsterdb/Database.class
+java/de/crupp/hamsterdb/DatabaseException.class
+java/de/crupp/hamsterdb/DuplicateCompareCallback.class
+java/de/crupp/hamsterdb/Environment.class
+java/de/crupp/hamsterdb/ErrorHandler.class
+java/de/crupp/hamsterdb/License.class
+java/de/crupp/hamsterdb/Parameter.class
+java/de/crupp/hamsterdb/PrefixCompareCallback.class
+java/de/crupp/hamsterdb/Transaction.class
+java/de/crupp/hamsterdb/Version.class
+java/hamsterdb-2.0.0.rc3.jar
+src/.libs/
+src/hamsterdb.lo
+src/libhamsterdb-java.la
+unittests/CursorTest$1.class
+unittests/CursorTest$MyComparator.class
+unittests/CursorTest.class
+unittests/DatabaseExceptionTest.class
+unittests/DatabaseTest$1.class
+unittests/DatabaseTest$MyComparator.class
+unittests/DatabaseTest$MyDupeComparator.class
+unittests/DatabaseTest$MyErrorHandler.class
+unittests/DatabaseTest$MyPrefixComparator.class
+unittests/DatabaseTest.class
+unittests/EnvironmentTest.class
+unittests/TransactionTest.class
+unittests/*.db*
