@@ -7,5 +7,6 @@ lib_LTLIBRARIES = libhamsterdb-java.la
 
 libhamsterdb_java_la_SOURCES = hamsterdb.c
 
-libhamsterdb_java_la_LDFLAGS = -version-info 1:0:0
+libhamsterdb_java_la_LDFLAGS = -version-info 1:0:0                           \
+                               $(top_builddir)/src/libhamsterdb.la
 
