@@ -1,3 +1,5 @@
+Dec 11, 2011 - chris ---------------------------------------------------
+o java: integrated the files, updated the interface
 
 Nov 26, 2011 - chris ---------------------------------------------------
                       release of hamsterdb-2.0.0rc3
